--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Twitchtv</title>
-<link href='https://storage.googleapis.com/code.getmdl.io/1.0.2/material.indigo-pink.min.css' rel='stylesheet' type='text/css'>
+<link href='https://storage.googleapis.com/code.getmdl.io/1.0.2/material.min.css' rel='stylesheet' type='text/css'>
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <script src="https://storage.googleapis.com/code.getmdl.io/1.0.2/material.min.js"></script>
 <link href='index.css' rel='stylesheet' type='text/css'>
@@ -11,15 +11,8 @@
 </head>
 <body>
 
-<div id="tv_main">
-
-</div>
-
-<div class="mdl-grid">
+<div id="tv_main" class="mdl-grid">
 <div class="mdl-cell mdl-cell--4-col">
-
-
-
 
 <div class="mdl-tabs mdl-js-tabs mdl-js-ripple-effect">
   <div class="mdl-tabs__tab-bar">
@@ -27,7 +20,7 @@
       <a href="#tv_on_pan" class="mdl-tabs__tab">Online</a>
       <a href="#tv_off_pan" class="mdl-tabs__tab">Offline</a>
 		<form action="#">
-		<div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
+		<div id="form_search" class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
 		<label class="mdl-button mdl-js-button mdl-button--icon" for="tv_search">
 		<i class="material-icons">search</i>
 		</label>
