--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Twitchtv</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link href='https://storage.googleapis.com/code.getmdl.io/1.0.2/material.min.css' rel='stylesheet' type='text/css'>
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <script src="https://storage.googleapis.com/code.getmdl.io/1.0.2/material.min.js"></script>
